# geant4-learning

./: CMakeLists.txt  CR39_Colab.ipynb  main.cc  run.mac
CR39_Geant4/: CR39_Colab.ipynb  README.md  init_vis.mac
analysis/: visualize.py
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
